fixed alignement issues and borders

--- a/public/css/searchresults.css
+++ b/public/css/searchresults.css
@@ -56,6 +56,7 @@ ul, li {
   width: 28%;
   float:left;
   height: 59px;
+  padding-left: 6px;
   overflow: hidden;
 }
 
@@ -75,7 +76,7 @@ ul, li {
 img {
   width: 4.5em;
   height: 4.5em;
-  border: 1px #e3e3e3 solid;
+  /*border: 1px #e3e3e3 solid;*/
 }
 
 .place:hover, .place {
